// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`it should support custom references - adv 1`] = `
[
  "1",
  "2",
  "1",
  null,
  "3",
]
`;

exports[`it should support custom references - adv 2`] = `
[
  {
    "selection": "Michel",
    "users": {
      "1": {
        "id": "1",
        "name": "Michel",
      },
      "2": {
        "id": "2",
        "name": "Mattia",
      },
    },
  },
  {
    "selection": "Mattia",
    "users": {
      "1": {
        "id": "1",
        "name": "Michel",
      },
      "2": {
        "id": "2",
        "name": "Mattia",
      },
    },
  },
  {
    "selection": "Michel",
    "users": {
      "1": {
        "id": "1",
        "name": "Michel",
      },
      "2": {
        "id": "2",
        "name": "Mattia",
      },
    },
  },
  {
    "selection": "Michel",
    "users": {
      "2": {
        "id": "2",
        "name": "Mattia",
      },
    },
  },
  {
    "selection": "Michel",
    "users": {
      "2": {
        "id": "2",
        "name": "Mattia",
      },
      "3": {
        "id": "3",
        "name": "Michel",
      },
    },
  },
]
`;

exports[`it should support custom references - adv 3`] = `
[
  {
    "op": "replace",
    "path": "/selection",
    "value": "Michel",
  },
  {
    "op": "replace",
    "path": "/selection",
    "value": "Mattia",
  },
  {
    "op": "replace",
    "path": "/selection",
    "value": "Michel",
  },
  {
    "op": "remove",
    "path": "/users/1",
  },
  {
    "op": "add",
    "path": "/users/3",
    "value": {
      "id": "3",
      "name": "Michel",
    },
  },
]
`;

exports[`it should support custom references - adv 4`] = `
[
  {
    "op": "replace",
    "path": "/selection",
    "value": "Mattia",
  },
  {
    "op": "replace",
    "path": "/selection",
    "value": "Michel",
  },
  {
    "op": "replace",
    "path": "/selection",
    "value": "Mattia",
  },
  {
    "op": "add",
    "path": "/users/1",
    "value": {
      "id": "1",
      "name": "Michel",
    },
  },
  {
    "op": "remove",
    "path": "/users/3",
  },
]
`;
